# flare-pfi-sorting

./: .gitignore  README.md  launch_sorter.py  pyproject.toml
pfi_sorter/: __init__.py  cli.py  sorter.py  web.py
tests/: test_sorter.py  test_web.py
web-app/: README.md  index.html  package-lock.json  package.json
web-app/src/: App.jsx  styles.css
